--- a/path_planning/path_planning/package.xml
+++ b/path_planning/path_planning/package.xml
@@ -2,12 +2,12 @@
 <package>
   <name>path_planning</name>
   <version>1.0.0</version>
-  <description>A path planning algorithm using RRT visualized in RVIZ</description>
+  <description>A path planning algorithm using 3D Informed RRT star visualized in RVIZ</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="nalin00796@gmail.com">Nalin Gupta</maintainer>
+  <maintainer email="jiaweimeng1994@gmail.com">Jiawei Meng</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
